Rewrite to Java 9 and Spring Boot